# src/codegen/model/buy200Response.ts
@@ -1,0 +1,37 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+export class Buy200Response {
+    'fights'?: number;
+    'money': number;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "fights",
+            "baseName": "fights",
+            "type": "number"
+        },
+        {
+            "name": "money",
+            "baseName": "money",
+            "type": "number"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return Buy200Response.attributeTypeMap;
+    }
+}
+
