# src/codegen/model/buyRequest.ts
@@ -1,0 +1,37 @@
+/**
+ * Leekwars
+ * Leekwars backend api
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+export class BuyRequest {
+    'itemId'?: string;
+    'quantity'?: number;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "itemId",
+            "baseName": "item_id",
+            "type": "string"
+        },
+        {
+            "name": "quantity",
+            "baseName": "quantity",
+            "type": "number"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return BuyRequest.attributeTypeMap;
+    }
+}
+
